# equisight

./: .env.example  .gitignore  .markdownlint.yml  .prettierignore  .prettierrc  .prettierrc.yml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest-setup-client.ts
.husky/: pre-commit
backend/: TODO.md  app.py  decorators.py  models.py  pyproject.toml
backend/instance/: equisight.db
backend/templates/: base.html  home.html  login.html  ticker_landing_page.html  ticker_search.html
docs/: architecture.md  features.md  getting-started.md  index.md  project-introduction.md
docs/.vitepress/: config.ts
docs/Backend/: index.md
docs/architecture/: index.md
docs/assets/: architecture.d2  authentication-workflow.d2  authentication.d2  class-diagram.d2  financial-reports.d2  history-data.d2  history.d2  intraday-data.d2  intraday.d2  news-workflow.d2  portfolio-workflow.d2  reports.d2  ticker-workflow.d2  views.d2
src/: app.css
src/lib/: utils.ts
src/lib/api/: auth.svelte.ts  client.ts  locations.ts  mock-client.ts  responses.ts  types.ts  utils.ts
src/lib/classes/: holding.svelte.ts  holding.test.ts  holding.ts  nav.svelte.test.ts  nav.svelte.ts  types.ts  user.svelte.test.ts  user.svelte.ts  user.ts
src/lib/components/: BreathingIndicator.svelte  ColouredIndicator.svelte  Equity.svelte  EquityHolding.svelte  NavButton.svelte  NavButton.svelte.test.ts
src/lib/mock/: data.json  pricedata.json  tickerdata.json  user.ts
src/routes/: +layout.svelte  +page.server.ts  TopNav.svelte
(+68 files in other folders)
